tests/errors/semantics/invalid_logical_op_type.odl
main :: () -> void  {
    1 or 2;
};